k8s/manifests-dee09a/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-dee09a
  namespace: journee
  labels:
    app: journee-dee09a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-dee09a
  template:
    metadata:
      labels:
        app: journee-dee09a
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-dee09a
          image: gcr.io/my-docker-471807/journee:v5.8.0
          ports:
            - containerPort: 3000
