k8s/manifests-dee09a/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-dee09a
  namespace: journee
spec:
  selector:
    app: journee-dee09a
  ports:
    - port: 80
      targetPort: 3000
